Add optional message field to quote request form

--- a/quote.html
+++ b/quote.html
@@ -193,6 +193,10 @@
                         <label for="contactPhone">WhatsApp / Cell Number *</label>
                         <input type="tel" id="contactPhone" name="contactPhone" required placeholder="Enter your phone number (e.g., 060 657 5400)">
                     </div>
+                    <div class="form-group">
+                        <label for="userMessage">Additional Message (optional)</label>
+                        <textarea id="userMessage" name="userMessage" rows="4" placeholder="Add any extra information, questions, or requests here..." style="resize:vertical;"></textarea>
+                    </div>
                 </fieldset>
 
                 <!-- Form Navigation -->
